--- a/index.html
+++ b/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Leaflet Map with Hover-Popups</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <title>Map with JSON-driven Pins</title>
+
+  <!-- Leaflet CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet/dist/leaflet.css"
+  />
+
+  <!-- MarkerCluster CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css"
+  />
+
+  <style>
+    /* make the map fill the viewport */
+    html, body, #map { margin:0; padding:0; height:100%; }
+  </style>
 </head>
 <body>
-  <div id="map" style="width:100%; height:100vh;"></div>
+  <div id="map"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    // create map with OSM tiles
-    const map = L.map('map').setView([20, 0], 2);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
+  <!-- Leaflet -->
+  <script defer src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-    // marker with a hover tooltip
-    const marker = L.marker([51.5, -0.09]).addTo(map);
-    marker.bindTooltip("Hello from London!", {permanent: false, direction: 'top'});
+  <!-- MarkerCluster -->
+  <script defer src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 
-    // marker with a click popup
-    L.marker([40.7, -74]).addTo(map)
-      .bindPopup("<b>New York City</b><br>Population: 8.3M");
-  </script>
+  <!-- Main script - create map -->
+  <script defer src="main.js"></script>
 </body>
 </html>
